# pappus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  crlibm.nix  default.nix  flake.nix  pycrlibm.nix  pyinterval.nix
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  prelude.cmake  variables.cmake
doc/: affine.tex
doc/source/: aaf.rst  conf.py  index.rst  others.rst
include/pappus/: pappus.hpp
include/pappus/affine/: affine.hpp  context.hpp
include/pappus/fp/: util.hpp
include/pappus/interval/: interval.hpp
include/pappus/ops/: context.hpp  domain.hpp  functions.hpp  value.hpp
include/pappus/util/: contracts.hpp
src/: CMakeLists.txt  affine.cpp  affine.hpp  context.hpp  fpops.hpp  fputil.hpp  interval.cpp  interval.hpp  pappus.hpp
src/affine/: affine.hpp  approx.cpp  common.cpp  context.hpp  linear.cpp
src/fp/: math.hpp  util.hpp
src/interval/: box.hpp  interval.cpp  interval.hpp  iterator.cpp  iterator.hpp
src/ops/: context.hpp  domain.hpp  functions.hpp  value.hpp
test/: CMakeLists.txt  affine.cpp  benchmarks.cpp  interval.cpp  main.cpp  util.cpp
test/source/: affine.cpp  benchmarks.cpp  fuzz.cpp  interval.cpp  util.cpp
